--- a/src/components/TableCustomers/style.search.styl
+++ b/src/components/TableCustomers/style.search.styl
@@ -21,7 +21,6 @@
     &__input
         width 100%
         padding 0 2rem 0 2.867rem
-        line-height 40px
         border 0
         outline none
 
